make sure the text field for the upload name doesn't overflow the screen

--- a/style/lantea.css
+++ b/style/lantea.css
@@ -164,6 +164,10 @@ h1 {
   opacity: .66;
 }
 
+#uploadDesc {
+  max-width: 95%;
+}
+
 @media screen and (max-width: 500px) {
   body {
     font-size: 10px;
